<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".view.view.user.forgetpassword.ForgetPasswordActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgDobites"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/app_name"
                android:cropToPadding="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/layer_594_copy_2"
                android:background="@null"
                android:layout_gravity="center"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/verifyContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:background="@null"
                android:visibility="visible">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/phone_number_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/edit_background"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:background="@drawable/ic_smartphone"
                        android:backgroundTint="@color/color_gray"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#FFF" />

                    <EditText
                        android:id="@+id/input_user_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@null"
                        android:gravity="start|center"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </androidx.appcompat.widget.LinearLayoutCompat>


                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:padding="16dp"
                    android:text="@string/login"
                    android:layout_gravity="center"
                    android:hint="@string/change_password"
                    android:onClick="@{()-> loginEventListener.onSignInButtonClicked()}"
                    android:background="@drawable/button_background"
                    app:cornerRadius="24dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- Change Password Layout -->

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/changePassContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgDobites"
                android:layout_centerInParent="true"
                android:layout_margin="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:visibility="invisible">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edit_background"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:background="@drawable/ic_lock"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/white" />

                    <EditText
                        android:id="@+id/input_verify_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@null"
                        android:gravity="start|center"
                        android:hint="@string/verify_code"
                        android:inputType="numberSigned"
                        android:maxLength="6"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edit_background"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:background="@drawable/ic_lock"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/white" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/new_password_layout_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="start|center"
                        android:textAlignment="viewStart"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_new_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="10dp"
                            android:background="@null"
                            android:gravity="start|center"
                            android:hint="@string/new_password"
                            android:inputType="textPassword"
                            android:textAlignment="viewStart"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/confirm_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edit_background"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:background="@drawable/ic_lock"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/white" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirm_password_layout_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="start|center"
                        android:textAlignment="viewStart"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@null"
                            android:gravity="start|center"
                            android:padding="10dp"
                            android:hint="@string/confirm_new_pass"
                            android:inputType="textPassword"
                            android:textAlignment="viewStart"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/confirm_password_layout_input"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:theme="@style/TextLabel"-->
                <!--app:hintEnabled="true">-->

                <!--<android.support.design.widget.TextInputEditText-->
                <!--android:id="@+id/input_confirm_password"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:hint="@string/confirm_new_pass_hint"-->
                <!--android:inputType="textPassword"-->
                <!--android:padding="8dp"-->
                <!--android:paddingStart="16dp"-->
                <!--android:paddingEnd="16dp"-->
                <!--android:textColor="@color/white"-->
                <!--tools:ignore="RtlCompat" />-->
                <!--</android.support.design.widget.TextInputLayout>-->

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_resendCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/resend_code"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:onClick="@{()-> forgetPasswordEventListener.onResendCodeClicked()}"
                    android:textSize="14sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_timer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/resend_code"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"
                    android:text="@string/change_password"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:visibility="invisible"
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
 </RelativeLayout>
